--- a/titanic_survival_pred.ipynb
+++ b/titanic_survival_pred.ipynb
@@ -22,12 +22,11 @@
     "\"\"\" Workflow Stages\n",
     "1. Problem Understanding | Question or problem definition.\n",
     "2. Data Collection | Acquire training and testing data.\n",
-    "3. Data Cleaning and Harmonization | Wrangle, prepare, cleanse the data. | Add all iterations here. Note which.\n",
-    "4. Data Exploration | Analyze, identify patterns, and explore the data.  | Add all iterations here. Note which.\n",
+    "3. Data Preprocessing | Wrangle, prepare, cleanse the data. \n",
+    "4. Data Exploration | Analyze, identify patterns, and explore the data.  \n",
     "5. Data Model Building | Model, predict and solve the problem.\n",
     "6. Data Model Validation and Reporting | Visualize, report, and present the problem solving steps and final solution.\n",
     "7. Solution Submission | Supply or submit the results.\n",
-    "\n",
     "\"\"\"\n",
     "\n",
     "\"\"\" Workflow Goals: Follow 7 C's \n",
@@ -3683,7 +3682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#7. Solution Submission | Supply or submit the results."
+    "#7. Solution Submission | Supply or submit the prediction output."
    ]
   },
   {
@@ -3692,7 +3691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create final submissions using hard and soft ensembles | Hard Voting Ensemble\n",
+    "#create final submissions using hard and soft ensembles | Hard Voting Ensemble\n",
     "hard_vote.fit(x_train_scl, y_train)\n",
     "y_pred_hardvote = hard_vote.predict(x_test_scl)\n",
     "submission_hardvote = {'PassengerID': test.PassengerId, 'Survived': y_pred_hardvote}\n",
@@ -3706,7 +3705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create final submissions using hard and soft ensembles | Soft Voting Ensemble\n",
+    "#create final submissions using hard and soft ensembles | Soft Voting Ensemble\n",
     "soft_vote.fit(x_train_scl, y_train)\n",
     "y_pred_softvote = soft_vote.predict(x_test_scl)\n",
     "submission_softvote = {'PassengerID': test.PassengerId, 'Survived': y_pred_softvote}\n",
