corrected exploratory function in notebook leading to exception

--- a/titanic_survival_pred.ipynb
+++ b/titanic_survival_pred.ipynb
@@ -1832,16 +1832,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ea23241548>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ea2352bb08>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1870,7 +1870,7 @@
     "\n",
     "#draw the heatmap with the mask and correct aspect ratio\n",
     "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
-    "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5}"
+    "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
    ]
   },
   {
