added pics for ReadME

--- a/titanic_survival_pred.ipynb
+++ b/titanic_survival_pred.ipynb
@@ -1979,7 +1979,7 @@
    ],
    "source": [
     "#build bar plots for each cat feature\n",
-    "bar_col1 = train[['Survived', 'Pclass', 'Sex', 'Embarked','title']] \n",
+    "bar_col1 = train[['Survived', 'Pclass', 'Sex', 'Embarked']] \n",
     "\n",
     "for e in bar_col1:\n",
     "    col_val = bar_col1[e].value_counts()\n",
